--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,body {
-  font-family: 'Inter', sans-serif;
+html,
+body {
+  font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
   overflow: hidden;
   height: 100%;
-
 }
-
 
 #root {
   height: 100%;
@@ -22,5 +21,3 @@ html,body {
 ::-webkit-scrollbar {
   display: none;
 }
-
-
